--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -19,3 +16,16 @@
 
 # Go workspace file
 go.work
+
+_test/.cq
+_test/cloudquery
+_test/*.log
+_test/*.sqlite
+_test/*.yaml
+
+.DS_Store
+
+cq-source-localfile
+
+dist
+*.log
