--- a/_test/import-csv.yaml
+++ b/_test/import-csv.yaml
@@ -2,7 +2,7 @@
 
 kind: source
 spec:
-  name: local_yaml
+  name: local_json
   registry: local
   path: /data/workspaces/gomods/cq-source-file/dist/cq-source-file_linux_amd64_v1/cq-source-file
   version: v1.0.0
@@ -11,11 +11,11 @@ spec:
   destinations:
     - sqlite
   spec:
-    file: ./test.yaml
-    format: yaml
-    table: my_yaml_data
-    keys:
-      - color
+    file: ./test.csv
+    format: csv
+    table: my_csv_data
+    separator: ","
+    keys: [color]
     types:
       value: string
       color: string
