--- a/_test/import-json.yaml
+++ b/_test/import-json.yaml
@@ -4,7 +4,7 @@ kind: source
 spec:
   name: local_json
   registry: local
-  path: /data/workspaces/gomods/cq-source-localfile/dist/cq-source-localfile_linux_amd64_v1/cq-source-localfile
+  path: /data/workspaces/gomods/cq-source-file/dist/cq-source-file_linux_amd64_v1/cq-source-file
   version: v1.0.0
   tables: 
     ["*"]
@@ -14,7 +14,7 @@ spec:
     file: ./test.json
     format: json
     table: my_json_data
-    keys: [value]
+    keys: [color]
     types:
       value: string
       color: string
