--- a/_test/import-xlsx.yaml
+++ b/_test/import-xlsx.yaml
@@ -1,7 +1,7 @@
 ---
 kind: source
 spec:
-  name: local_csv
+  name: local_xlsx
   registry: local
   path: /data/workspaces/gomods/cq-source-file/dist/cq-source-file_linux_amd64_v1/cq-source-file
   version: v1.0.0
@@ -10,10 +10,9 @@ spec:
   destinations:
     - sqlite
   spec:
-    file: ./test.csv
-    format: csv
-    table: my_csv_data
-    separator: ","
+    file: ./test.xlsx
+    format: xlsx
+    table: my_xlsx_data
     keys: [color]
     types:
       value: string
