--- a/_test/test.yaml
+++ b/_test/test.yaml
@@ -1,15 +1,29 @@
 ---
 - color: red
   value: "#f00"
+  optimized: true
+  count: 123
 - color: green
   value: "#0f0"
+  optimized: false
+  count: -123
 - color: blue
   value: "#00f"
+  optimized: true
+  count: -321
 - color: cyan
   value: "#0ff"
+  optimized: false
+  count: 321
 - color: magenta
   value: "#f0f"
+  optimized: true
+  count: 456
 - color: yellow
   value: "#ff0"
+  optimized: false
+  count: -456
 - color: black
   value: "#000"
+  optimized: true
+  count: 789
