Fix panic on null cells

--- a/_test/import-xlsx.yaml
+++ b/_test/import-xlsx.yaml
@@ -23,6 +23,7 @@ spec:
         unique: true
       - name: optimized
         type: boolean
+        notnull: true # comment to get a null
       - name: count
         type: integer
 ---
