--- a/_test/import-csv.yaml
+++ b/_test/import-csv.yaml
@@ -1,7 +1,40 @@
 ---
+# kind: source
+# spec:
+#   name: test1
+#   registry: local
+#   path: /data/workspaces/gomods/cq-source-file/dist/cq-source-file_linux_amd64_v1/cq-source-file
+#   version: v1.0.0
+#   tables: 
+#     ["*"]
+#   destinations:
+#     - sqlite
+#   spec:
+#     file: ./test.csv
+#     format: csv
+#     table: T1
+#     separator: ","
+#     filter: _.color startsWith 'b'
+#     columns:
+#       - name: color
+#         type: string
+#         key: true
+#         unique: true
+#         notnull: true
+#       - name: value
+#         type: string
+#         unique: true
+#         notnull: true
+#       - name: optimized
+#         type: boolean
+#         notnull: true
+#       - name: count
+#         type: integer
+#         notnull: true
+# ---
 kind: source
 spec:
-  name: local_csv
+  name: test2
   registry: local
   path: /data/workspaces/gomods/cq-source-file/dist/cq-source-file_linux_amd64_v1/cq-source-file
   version: v1.0.0
@@ -12,20 +45,25 @@ spec:
   spec:
     file: ./test.csv
     format: csv
-    table: my_csv_data
+    table: T2
     separator: ","
+    filter: _.color not startsWith 'b'
     columns:
       - name: color
         type: string
         key: true
         unique: true
+        notnull: true
       - name: value
         type: string
         unique: true
+        notnull: true
       - name: optimized
         type: boolean
+        notnull: true
       - name: count
         type: integer
+        notnull: true
 ---
 kind: destination
 spec:
