Add support for separate nested table field in spec

--- a/_test/import-json.yaml
+++ b/_test/import-json.yaml
@@ -12,24 +12,25 @@ spec:
   spec:
     file: ./test.json
     format: json
-    table: T1
-    filter: _.color startsWith 'b'
-    columns:
-      - name: color
-        type: string
-        key: true
-        unique: true
-        notnull: true
-      - name: value
-        type: string
-        unique: true
-        notnull: true
-      - name: optimized
-        type: boolean
-        notnull: true
-      - name: count
-        type: integer
-        notnull: true
+    table: 
+      name: T1
+      filter: _.color startsWith 'b'
+      columns:
+        - name: color
+          type: string
+          key: true
+          unique: true
+          notnull: true
+        - name: value
+          type: string
+          unique: true
+          notnull: true
+        - name: optimized
+          type: boolean
+          notnull: true
+        - name: count
+          type: integer
+          notnull: true
 ---
 kind: source
 spec:
@@ -44,24 +45,25 @@ spec:
   spec:
     file: ./test.json
     format: json
-    table: T2
-    filter: "_.color not startsWith 'b'"
-    columns:
-      - name: color
-        type: string
-        key: true
-        unique: true
-        notnull: true
-      - name: value
-        type: string
-        unique: true
-        notnull: true
-      - name: optimized
-        type: boolean
-        notnull: true
-      - name: count
-        type: integer
-        notnull: true
+    table: 
+      name: T2
+      filter: "_.color not startsWith 'b'"
+      columns:
+        - name: color
+          type: string
+          key: true
+          unique: true
+          notnull: true
+        - name: value
+          type: string
+          unique: true
+          notnull: true
+        - name: optimized
+          type: boolean
+          notnull: true
+        - name: count
+          type: integer
+          notnull: true
 ---
 kind: destination
 spec:
