--- a/_test/import-csv.yaml
+++ b/_test/import-csv.yaml
@@ -1,37 +1,38 @@
 ---
-# kind: source
-# spec:
-#   name: test1
-#   registry: local
-#   path: /data/workspaces/gomods/cq-source-file/dist/cq-source-file_linux_amd64_v1/cq-source-file
-#   version: v1.0.0
-#   tables: 
-#     ["*"]
-#   destinations:
-#     - sqlite
-#   spec:
-#     file: ./test.csv
-#     format: csv
-#     table: T1
-#     separator: ","
-#     filter: _.color startsWith 'b'
-#     columns:
-#       - name: color
-#         type: string
-#         key: true
-#         unique: true
-#         notnull: true
-#       - name: value
-#         type: string
-#         unique: true
-#         notnull: true
-#       - name: optimized
-#         type: boolean
-#         notnull: true
-#       - name: count
-#         type: integer
-#         notnull: true
-# ---
+kind: source
+spec:
+  name: test1
+  registry: local
+  path: /data/workspaces/gomods/cq-source-file/dist/cq-source-file_linux_amd64_v1/cq-source-file
+  version: v1.0.0
+  tables: 
+    ["*"]
+  destinations:
+    - sqlite
+  spec:
+    file: ./test.csv
+    format: csv
+    separator: ","
+    table: 
+      name: T1
+      filter: _.color startsWith 'b'
+      columns:
+        - name: color
+          type: string
+          key: true
+          unique: true
+          notnull: true
+        - name: value
+          type: string
+          unique: true
+          notnull: true
+        - name: optimized
+          type: boolean
+          notnull: true
+        - name: count
+          type: integer
+          notnull: true
+---
 kind: source
 spec:
   name: test2
@@ -45,25 +46,26 @@ spec:
   spec:
     file: ./test.csv
     format: csv
-    table: T2
     separator: ","
-    filter: _.color not startsWith 'b'
-    columns:
-      - name: color
-        type: string
-        key: true
-        unique: true
-        notnull: true
-      - name: value
-        type: string
-        unique: true
-        notnull: true
-      - name: optimized
-        type: boolean
-        notnull: true
-      - name: count
-        type: integer
-        notnull: true
+    table: 
+      name: T2    
+      filter: _.color not startsWith 'b'
+      columns:
+        - name: color
+          type: string
+          key: true
+          unique: true
+          notnull: true
+        - name: value
+          type: string
+          unique: true
+          notnull: true
+        - name: optimized
+          type: boolean
+          notnull: true
+        - name: count
+          type: integer
+          notnull: true
 ---
 kind: destination
 spec:
