--- a/_test/import-xlsx.yaml
+++ b/_test/import-xlsx.yaml
@@ -12,24 +12,25 @@ spec:
   spec:
     file: ./test.xlsx
     format: xlsx
-    table: T1
-    filter: _.color startsWith 'b'
-    columns:
-      - name: color
-        type: string
-        key: true
-        unique: true
-        notnull: true
-      - name: value
-        type: string
-        unique: true
-        notnull: true
-      - name: optimized
-        type: boolean
-        notnull: true # comment to get a null
-      - name: count
-        type: integer
-        notnull: true
+    table: 
+      name: T1
+      filter: _.color startsWith 'b'
+      columns:
+        - name: color
+          type: string
+          key: true
+          unique: true
+          notnull: true
+        - name: value
+          type: string
+          unique: true
+          notnull: true
+        - name: optimized
+          type: boolean
+          notnull: true # comment to get a null
+        - name: count
+          type: integer
+          notnull: true
 ---
 kind: source
 spec:
@@ -44,24 +45,25 @@ spec:
   spec:
     file: ./test.xlsx
     format: xlsx
-    table: T2
-    filter: _.color not startsWith 'b'
-    columns:
-      - name: color
-        type: string
-        key: true
-        unique: true
-        notnull: true
-      - name: value
-        type: string
-        unique: true
-        notnull: true
-      - name: optimized
-        type: boolean
-        notnull: true # comment to get a null
-      - name: count
-        type: integer
-        #notnull: true
+    table: 
+      name: T2
+      filter: _.color not startsWith 'b'
+      columns:
+        - name: color
+          type: string
+          key: true
+          unique: true
+          notnull: true
+        - name: value
+          type: string
+          unique: true
+          notnull: true
+        - name: optimized
+          type: boolean
+          notnull: true # comment to get a null
+        - name: count
+          type: integer
+          #notnull: true
 ---
 kind: destination
 spec:
