--- a/_test/import-csv.yaml
+++ b/_test/import-csv.yaml
@@ -32,40 +32,66 @@ spec:
         - name: count
           type: integer
           notnull: true
----
-kind: source
-spec:
-  name: test2
-  registry: local
-  path: /data/workspaces/gomods/cq-source-file/dist/cq-source-file_linux_amd64_v1/cq-source-file
-  version: v1.0.0
-  tables: 
-    ["*"]
-  destinations:
-    - sqlite
-  spec:
-    file: ./test.csv
-    format: csv
-    separator: ","
-    table: 
-      name: T2    
-      filter: _.color not startsWith 'b'
-      columns:
-        - name: color
-          type: string
-          key: true
-          unique: true
-          notnull: true
-        - name: value
-          type: string
-          unique: true
-          notnull: true
-        - name: optimized
-          type: boolean
-          notnull: true
-        - name: count
-          type: integer
-          notnull: true
+    relations:
+      - name: T1_UPPER
+        filter: _.color startsWith 'blu'
+        columns:
+          - name: upper_color
+            type: string
+            key: true
+            unique: true
+            notnull: true
+            transform: "{{index .Row \"color\" | toString | upper}}"
+          - name: upper_value
+            type: string
+            transform: "{{index .Row \"value\" | toString | upper}}"
+      - name: T1_UPPER
+        filter: _.color startsWith 'bla'
+        columns:
+          - name: upper_color
+            type: string
+            key: true
+            unique: true
+            notnull: true
+            transform: "{{index .Row \"color\" | toString | upper}}"
+          - name: upper_value
+            type: string
+            transform: "{{index .Row \"value\" | toString | upper}}"
+
+# ---
+# kind: source
+# spec:
+#   name: test2
+#   registry: local
+#   path: /data/workspaces/gomods/cq-source-file/dist/cq-source-file_linux_amd64_v1/cq-source-file
+#   version: v1.0.0
+#   tables: 
+#     ["*"]
+#   destinations:
+#     - sqlite
+#   spec:
+#     file: ./test.csv
+#     format: csv
+#     separator: ","
+#     table: 
+#       name: T2    
+#       filter: _.color not startsWith 'b'
+#       columns:
+#         - name: color
+#           type: string
+#           key: true
+#           unique: true
+#           notnull: true
+#         - name: value
+#           type: string
+#           unique: true
+#           notnull: true
+#         - name: optimized
+#           type: boolean
+#           notnull: true
+#         - name: count
+#           type: integer
+#           notnull: true
 ---
 kind: destination
 spec:
