--- a/_test/import-xlsx.yaml
+++ b/_test/import-xlsx.yaml
@@ -27,10 +27,35 @@ spec:
           notnull: true
         - name: optimized
           type: boolean
-          notnull: true # comment to get a null
+          notnull: true
         - name: count
           type: integer
           notnull: true
+    relations:
+      - name: T1_UPPER
+        filter: _.color startsWith 'blu'
+        columns:
+          - name: upper_color
+            type: string
+            key: true
+            unique: true
+            notnull: true
+            transform: "{{index .Row \"color\" | toString | upper}}"
+          - name: upper_value
+            type: string
+            transform: "{{index .Row \"value\" | toString | upper}}"
+      - name: T1_UPPER
+        filter: _.color startsWith 'bla'
+        columns:
+          - name: upper_color
+            type: string
+            key: true
+            unique: true
+            notnull: true
+            transform: "{{index .Row \"color\" | toString | upper}}"
+          - name: upper_value
+            type: string
+            transform: "{{index .Row \"value\" | toString | upper}}"
 ---
 kind: source
 spec:
@@ -46,7 +71,7 @@ spec:
     file: ./test.xlsx
     format: xlsx
     table: 
-      name: T2
+      name: T2    
       filter: _.color not startsWith 'b'
       columns:
         - name: color
@@ -60,10 +85,10 @@ spec:
           notnull: true
         - name: optimized
           type: boolean
-          notnull: true # comment to get a null
+          notnull: true
         - name: count
           type: integer
-          #notnull: true
+          notnull: false
 ---
 kind: destination
 spec:
