--- a/_test/import-yaml.yaml
+++ b/_test/import-yaml.yaml
@@ -19,11 +19,8 @@ spec:
         - name: color
           type: string
           key: true
-          notnull: true
           unique: true
-        - name: ucolor
-          type: string
-          transform: "{{index .Row \"color\" | toString | upper}}"
+          notnull: true
         - name: value
           type: string
           unique: true
@@ -34,6 +31,31 @@ spec:
         - name: count
           type: integer
           notnull: true
+    relations:
+      - name: T1_UPPER
+        filter: _.color startsWith 'blu'
+        columns:
+          - name: upper_color
+            type: string
+            key: true
+            unique: true
+            notnull: true
+            transform: "{{index .Row \"color\" | toString | upper}}"
+          - name: upper_value
+            type: string
+            transform: "{{index .Row \"value\" | toString | upper}}"
+      - name: T1_UPPER
+        filter: _.color startsWith 'bla'
+        columns:
+          - name: upper_color
+            type: string
+            key: true
+            unique: true
+            notnull: true
+            transform: "{{index .Row \"color\" | toString | upper}}"
+          - name: upper_value
+            type: string
+            transform: "{{index .Row \"value\" | toString | upper}}"
 ---
 kind: source
 spec:
@@ -49,17 +71,14 @@ spec:
     file: ./test.yaml
     format: yaml
     table: 
-      name: T2
+      name: T2    
       filter: _.color not startsWith 'b'
       columns:
         - name: color
           type: string
           key: true
-          notnull: true
           unique: true
-        - name: ucolor
-          type: string
-          transform: "{{index .Row \"color\" | toString | upper}}"
+          notnull: true
         - name: value
           type: string
           unique: true
