fix typos and format

--- a/_test/import-json.yaml
+++ b/_test/import-json.yaml
@@ -3,16 +3,15 @@ kind: source
 spec:
   name: test1
   registry: local
-  path: /data/workspaces/gomods/cq-source-file/dist/cq-source-file_linux_amd64_v1/cq-source-file
+  path: ../dist/cq-source-file_linux_amd64_v1/cq-source-file
   version: v1.0.0
-  tables: 
-    ["*"]
+  tables: ["*"]
   destinations:
     - sqlite
   spec:
     file: ./test.json
     format: json
-    table: 
+    table:
       name: T1
       filter: _.color startsWith 'b'
       columns:
@@ -40,11 +39,11 @@ spec:
             key: true
             unique: true
             notnull: true
-            transform: "{{index .Row \"color\" | toString | upper}}"
+            transform: '{{index .Row "color" | toString | upper}}'
           - name: upper_value
             type: string
-            transform: "{{index .Row \"value\" | toString | upper}}"
-      - name: T1_UPPER
+            transform: '{{index .Row "value" | toString | upper}}'
+      - name: T2_UPPER
         filter: _.color startsWith 'bla'
         columns:
           - name: upper_color
@@ -52,26 +51,25 @@ spec:
             key: true
             unique: true
             notnull: true
-            transform: "{{index .Row \"color\" | toString | upper}}"
+            transform: '{{index .Row "color" | toString | upper}}'
           - name: upper_value
             type: string
-            transform: "{{index .Row \"value\" | toString | upper}}"
+            transform: '{{index .Row "value" | toString | upper}}'
 ---
 kind: source
 spec:
   name: test2
   registry: local
-  path: /data/workspaces/gomods/cq-source-file/dist/cq-source-file_linux_amd64_v1/cq-source-file
+  path: ../dist/cq-source-file_linux_amd64_v1/cq-source-file
   version: v1.0.0
-  tables: 
-    ["*"]
+  tables: ["*"]
   destinations:
     - sqlite
   spec:
     file: ./test.json
     format: json
-    table: 
-      name: T2    
+    table:
+      name: T2
       filter: _.color not startsWith 'b'
       columns:
         - name: color
@@ -94,6 +92,6 @@ kind: destination
 spec:
   name: sqlite
   path: cloudquery/sqlite
-  version: v2.0.5
+  version: v2.7.5
   spec:
     connection_string: ./import.sqlite
