--- a/_test/import-csv.yaml
+++ b/_test/import-csv.yaml
@@ -5,15 +5,14 @@ spec:
   registry: local
   path: /data/workspaces/gomods/cq-source-file/dist/cq-source-file_linux_amd64_v1/cq-source-file
   version: v1.0.0
-  tables: 
-    ["*"]
+  tables: ["*"]
   destinations:
     - sqlite
   spec:
     file: ./test.csv
     format: csv
     separator: ","
-    table: 
+    table:
       name: T1
       filter: _.color startsWith 'b'
       columns:
@@ -41,10 +40,10 @@ spec:
             key: true
             unique: true
             notnull: true
-            transform: "{{index .Row \"color\" | toString | upper}}"
+            transform: '{{index .Row "color" | toString | upper}}'
           - name: upper_value
             type: string
-            transform: "{{index .Row \"value\" | toString | upper}}"
+            transform: '{{index .Row "value" | toString | upper}}'
       - name: T1_UPPER
         filter: _.color startsWith 'bla'
         columns:
@@ -53,10 +52,10 @@ spec:
             key: true
             unique: true
             notnull: true
-            transform: "{{index .Row \"color\" | toString | upper}}"
+            transform: '{{index .Row "color" | toString | upper}}'
           - name: upper_value
             type: string
-            transform: "{{index .Row \"value\" | toString | upper}}"
+            transform: '{{index .Row "value" | toString | upper}}'
 ---
 kind: source
 spec:
@@ -64,16 +63,15 @@ spec:
   registry: local
   path: /data/workspaces/gomods/cq-source-file/dist/cq-source-file_linux_amd64_v1/cq-source-file
   version: v1.0.0
-  tables: 
-    ["*"]
+  tables: ["*"]
   destinations:
     - sqlite
   spec:
     file: ./test.csv
     format: csv
     separator: ","
-    table: 
-      name: T2    
+    table:
+      name: T2
       filter: _.color not startsWith 'b'
       columns:
         - name: color
@@ -96,6 +94,6 @@ kind: destination
 spec:
   name: sqlite
   path: cloudquery/sqlite
-  version: v2.0.5
+  version: v2.7.5
   spec:
     connection_string: ./import.sqlite
